force-app/main/default/objects/Communication_Record__c/Communication_Record__c.object-meta.xml
<CustomObject>
    <label>Communication Record</label>
    <nameField>
        <displayFormat>CR-{0000}</displayFormat>
        <label>Communication Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communications Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>