force-app/main/default/objects/Communication_Record__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Communications Records</relationshipLabel>
    <relationshipName>Communications_Records</relationshipName>
    <type>Lookup</type>
</CustomField>