force-app/main/default/objects/Communication_Record__c/fields/Client_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Communications Records</relationshipLabel>
    <relationshipName>Communications_Records</relationshipName>
    <type>Lookup</type>
</CustomField>