force-app/main/default/objects/Communication_Record__c/fields/Organization_Name__c.field-meta.xml
<CustomField>
    <fullName>Organization_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Communications Records</relationshipLabel>
    <relationshipName>Communications_Records</relationshipName>
    <type>Lookup</type>
</CustomField>